--- a/.oathkeeper/config/access-rules.yml
+++ b/.oathkeeper/config/access-rules.yml
@@ -26,7 +26,7 @@
     preserve_host: true
     url: "http://kratos-ss-ui-react:4435"
   match:
-    url: "http://127.0.0.1:4455/<{error,verify,auth/*,**.css,**.js}{/,}>"
+    url: "http://127.0.0.1:4455/<{static/*,main*,sockjs-node,error,verify,auth/*,**.css,**.js}{/,}>"
     methods:
       - GET
   authenticators:
