--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,30 +62,18 @@ services:
     networks:
       - intranet
 
-  oathkeeper:
-    image: oryd/oathkeeper:v0.38
+  nginx:
+    image: "nginx:mainline"
     depends_on:
       - kratos
     ports:
       - 4455:4455
       - 4456:4456
-    command:
-      serve proxy -c "/etc/config/oathkeeper/oathkeeper.yml"
-    environment:
-      - LOG_LEVEL=debug
     restart: on-failure
     networks:
       - intranet
     volumes:
-      - ./.oathkeeper/config:/etc/config/oathkeeper
-
-  mailslurper:
-    image: oryd/mailslurper:latest-smtps
-    ports:
-      - "4436:4436"
-      - "4437:4437"
-    networks:
-      - intranet
+      - ./.nginx/nginx.conf:/etc/nginx/conf.d/default.conf
 
 networks:
   intranet:
