--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "history": "^5.0.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
