--- a/.kratos/config/.kratos.yml
+++ b/.kratos/config/.kratos.yml
@@ -33,7 +33,7 @@ selfservice:
 
     logout:
       after:
-        default_browser_return_url: http://127.0.0.1:4455/auth/login
+        default_browser_return_url: http://127.0.0.1:4455/
 
     login:
       ui_url: http://127.0.0.1:4455/auth/login
