--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,14 @@ services:
     volumes:
       - ./.nginx/nginx.conf:/etc/nginx/conf.d/default.conf
 
+  mailslurper:
+    image: oryd/mailslurper:latest-smtps
+    ports:
+      - "4436:4436"
+      - "4437:4437"
+    networks:
+      - intranet
+
 networks:
   intranet:
 
