--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   kratos-migrate:
-    image: oryd/kratos:latest-sqlite
+    image: oryd/kratos:v0.4.6-alpha.1-sqlite
     environment:
       - DSN=sqlite:///var/lib/sqlite/db.sqlite?_fk=true&mode=rwc
     volumes:
@@ -42,7 +42,7 @@ services:
   kratos:
     depends_on:
       - kratos-migrate
-    image: oryd/kratos:latest-sqlite
+    image: oryd/kratos:v0.4.6-alpha.1-sqlite
     ports:
       - "4433:4433" # public
       - "4434:4434" # admin
