Add expired session refresh handler

--- a/.kratos/config/.kratos.yml
+++ b/.kratos/config/.kratos.yml
@@ -1,60 +1,49 @@
+session:
+  lifespan: 24h
 serve:
   public:
     base_url: http://127.0.0.1:4455/.ory/kratos/public/
   admin:
     base_url: http://kratos:4434/
-
 selfservice:
   default_browser_return_url: http://127.0.0.1:4455/
   whitelisted_return_urls:
     - http://127.0.0.1:4455
-
   strategies:
     password:
       enabled: true
-
   flows:
     error:
       ui_url: http://127.0.0.1:4455/error
-
     settings:
       ui_url: http://127.0.0.1:4455/settings
       privileged_session_max_age: 15m
-
     recovery:
       enabled: true
       ui_url: http://127.0.0.1:4455/recovery
-
     verification:
       enabled: true
       ui_url: http://127.0.0.1:4455/verify
       after:
         default_browser_return_url: http://127.0.0.1:4455/
-
     logout:
       after:
         default_browser_return_url: http://127.0.0.1:4455/
-
     login:
       ui_url: http://127.0.0.1:4455/auth/login
       request_lifespan: 10m
-
     registration:
       request_lifespan: 10m
       ui_url: http://127.0.0.1:4455/auth/registration
       after:
         password:
           hooks:
-            -
-              hook: session
-
+            - hook: session
 log:
   level: debug
-
 secrets:
   cookie:
     - PLEASE-CHANGE-ME-I-AM-VERY-INSECURE
-
 hashers:
   argon2:
     parallelism: 1
@@ -62,10 +51,8 @@ hashers:
     iterations: 2
     salt_length: 16
     key_length: 16
-
 identity:
   default_schema_url: file:///etc/config/kratos/identity.traits.schema.json
-
 courier:
   smtp:
     connection_uri: smtps://test:test@mailslurper:1025/?skip_ssl_verify=true
